[gd_scene load_steps=16 format=3 uid="uid://clhuoalnfnlni"]

[ext_resource type="Script" path="res://Enemies/CommonEnemy.gd" id="1_aitjy"]
[ext_resource type="Texture2D" uid="uid://da1c6bjxksh80" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_0.png" id="2_lf4he"]
[ext_resource type="Texture2D" uid="uid://dg5ok7ykv5uxc" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_1.png" id="3_qlm2x"]
[ext_resource type="Texture2D" uid="uid://c3dvyvxo25ylf" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_2.png" id="4_0m7xb"]
[ext_resource type="Texture2D" uid="uid://bx2adgou0bcub" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_3.png" id="5_odubj"]
[ext_resource type="Texture2D" uid="uid://da6l8863p60bw" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_4.png" id="6_qft7i"]
[ext_resource type="Texture2D" uid="uid://b1pb0gufpw3jl" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_5.png" id="7_6m7qh"]
[ext_resource type="Texture2D" uid="uid://ct7mk6xb32ev6" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_6.png" id="8_b2k7j"]
[ext_resource type="Texture2D" uid="uid://ca2vr2kgt32d7" path="res://Assets/Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 1/walk_7.png" id="9_gi4i1"]
[ext_resource type="AudioStream" uid="uid://dft0hjcek575q" path="res://Assets/Sound/death_sound.wav" id="10_v4ovn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1poad"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lf4he")
}, {
"duration": 1.0,
"texture": ExtResource("3_qlm2x")
}, {
"duration": 1.0,
"texture": ExtResource("4_0m7xb")
}, {
"duration": 1.0,
"texture": ExtResource("5_odubj")
}, {
"duration": 1.0,
"texture": ExtResource("6_qft7i")
}, {
"duration": 1.0,
"texture": ExtResource("7_6m7qh")
}, {
"duration": 1.0,
"texture": ExtResource("8_b2k7j")
}, {
"duration": 1.0,
"texture": ExtResource("9_gi4i1")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q0t71"]
radius = 197.5
height = 615.0

[sub_resource type="Animation" id="Animation_46ymy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.12, 0.12)]
}

[sub_resource type="Animation" id="Animation_dr1cg"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.12, 0.12), Vector2(0.14, 0.14), Vector2(0.05, 0.05)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ufaj3"]
_data = {
"RESET": SubResource("Animation_46ymy"),
"death": SubResource("Animation_dr1cg")
}

[node name="CommonEnemy" type="Area2D"]
scale = Vector2(0.12, 0.12)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_aitjy")
exp_worth = 100

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.66663, -124.333)
sprite_frames = SubResource("SpriteFrames_1poad")
animation = &"walk"
offset = Vector2(0, -345)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, -1.83325)
shape = SubResource("CapsuleShape2D_q0t71")

[node name="TargetChange" type="Timer" parent="."]
autostart = true

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="deathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_v4ovn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ufaj3")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered" flags=18]
[connection signal="body_entered" from="." to="." method="_on_body_entered" flags=18]
[connection signal="timeout" from="TargetChange" to="." method="_on_target_change_timeout" flags=18]
